# NSES_sp

./: Cargo.toml  README.txt  email.txt  runner_1.sh  runner_2.sh
data/: data1_Lebeda.txt  data1_Tupy.txt  data2_Lebeda.txt  data2_Tupy.txt  test.txt  test_small.txt
nses_referat/: .vimproject  main.tex
nses_referat/src/: _preamble.tex  reseni.tex  titulka.tex  zadani.tex
nses_referat/tikz/: main-figure0.dep  main-figure0.md5  main-figure1.dep  main-figure1.md5  main-figure2.dep  main-figure2.md5  main-figure3.dep  main-figure3.md5  main-figure4.dep  main-figure4.md5  main-figure5.dep  main-figure5.md5
plots/: test1.html
src/: act_fn.rs  cli.rs  layer.rs  main.rs  net.rs  plot.rs  utils.rs
